--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "melos-flow-scanner",
+  "name": "melos-flow-backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -36,7 +36,7 @@
     "@typegoose/typegoose": "^9.7.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
-    "melos-flow": "https://github.com/Pure-Peace/melos-flow-contracts.git",
+    "melos-flow": "https://github.com/Pure-Peace/melos-flow.git",
     "mongoose": "^6.2.6",
     "mongoose-paginate-v2": "^1.6.3",
     "nestjs-typegoose": "^7.1.38",
