--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ WEB_APP_PORT=8080
 # testnet | mainnet | emulator
 NETWORK = testnet
 
+# multiple access nodes can be separated by ','
 EMULATOR_ACCESS_NODES = https://localhost:8080
 TESTNET_ACCESS_NODES = https://access-testnet.onflow.org
 MAINNET_ACCESS_NODES = https://access.onflow.org
