SCANNER: ADD AWS SQS, AND SEND SQS MESSAGE

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ NODE_ENV=production
 MONGO_URI=<mongo db uri>
 WEB_APP_PORT=8080
 
+AWS_SQS_REGION=<aws sqs region>
+AWS_SQS_ACCESS_KEY_ID=
+AWS_SQS_SECRET_ACCESS_KEY=
+
 # testnet | mainnet | emulator
 NETWORK = testnet
 
