--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:debug": "nest start --debug --watch",
     "prod-run-api": "nest build web-api && node dist/apps/web-api/main",
     "prod-run-scanner": "nest build block-scanner && node dist/apps/block-scanner/main",
+    "prod-run-event-handler": "nest build event-handler && node dist/apps/event-handler/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -22,6 +23,7 @@
     "test:e2e": "jest --config ./apps/block-scanner/test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-sqs": "^3.112.0",
     "@melosstudio/flow-sdk": "1.1.2",
     "@nestjs/axios": "^0.0.7",
     "@nestjs/common": "^8.0.0",
