--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.112.0",
-    "@melosstudio/flow-sdk": "1.1.6",
+    "@melosstudio/flow-sdk": "1.1.14",
     "@nestjs/axios": "^0.0.7",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.2.0",
@@ -34,7 +34,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/schedule": "^1.1.0",
     "@nestjs/swagger": "^5.2.0",
-    "@onflow/fcl": "^0.0.79-alpha.4",
+    "@onflow/fcl": "^0.0.78",
     "@onflow/sdk": "0.0.44",
     "@prisma/client": "^3.10.0",
     "@typegoose/typegoose": "^9.7.0",
